--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ lxml==5.3.0
 requests==2.32.3
 python-dotenv==1.0.1
 fuzzywuzzy==0.18.0
-python-Levenshtein==0.25.1
+rapidfuzz==3.14.3
 requests-oauthlib==2.0.0
 httpx==0.27.2
 pydantic==2.9.2
